# ProfessorRaacz

milestone_inspection_types/: pyproject.toml
milestone_inspection_types/raczprof_inspection/: inspections.py
milestone_inspection_types/tests/: inspections_tests.py
raczprof/: app.py  run.py  validation.py
raczprof/local/email/: raczprofesszorapp.txt
raczprof/static/: github_inspections_tests.py  gitlab_inspections_tests.py  gitlab_rendszerfejlesztes_egy.py
raczprof/templates/: git.html  github.html  gitlab.html  main.html  result.html
